--- a/surveymap.html
+++ b/surveymap.html
@@ -9,12 +9,14 @@
     <meta keywords="Stockport, bat, survey">
     <meta name="viewport" content="width=device-width, inital scale=1.0">
 </head>
-<div id="siteHolder">
 <body>
+    <div id="siteHolder">
+    <img src="banner.png" alt="banner" height="100" width="auto">
     <header>
         <nav>
             <ul>
                 <li> <a href="index.html"> Homepage </a> </li>
+                <li> <a href="identify.html"> Indentification Guide </a> </li>
                 <li> <a href="surveymap.html" id="active">Survey Maps</a> </li>
                 <li> <a href="survey.html"> Survey </a> </li>
              </ul>
@@ -39,14 +41,21 @@
             <h1>Bats you might see in Stockport</h1>
             <p> There are various species of bat you might see in Stockport:</p>
         <section></section>
-            <h3>Bechstein's Bat</h3>
             <div class="flex-container">
+                <figure>
+                    <figcaption><h3>Bechstein's Bat</h3></figcaption>
                     <img src="Bechstein.png" alt="Map of Bechstein Bat Population">
+                </figure>
+                <figure>
+                    <figcaption><h3>Brown Long-eared Bat</h3></figcaption>
+                    <img src="Brown Long-eared Bat.png" alt="Map of Brown Long-eared Bat Population">
+                </figure>
             </div>
 
             
         </section>
     </main>
+    <br>
     <footer>Copyright Maraiga Bailey</footer>
 <br>
 </body>
