--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <meta keywords="Stockport, bat, survey">
     <meta name="viewport" content="width=device-width, inital scale=1.0">
 </head>
-<div id="siteHolder">
 <body>
+    <div id="siteHolder">
+    <img src="banner.png" alt="banner" height="100" width="auto">
     <header>
         <nav>
             <ul>
                 <li> <a href="index.html" id="active"> Homepage </a> </li>
+                <li> <a href="identify.html"> Indentification Guide </a> </li>
                 <li> <a href="surveymap.html"> Survey Maps </a> </li>
                 <li> <a href="survey.html"> Survey </a> </li>
              </ul>
@@ -25,7 +27,7 @@
         <section>
             <p>Help us take <em>'stock'</em> of Stockport's bats.
                 <br> <br>
-                Bat numbers in the North West have drastically declined over the past century. We need your help to monitor these fascinating mammals through surveys and observation in your local area. This helps us understand their population and plan survival tactics. We are part of North Lancashire Bat Group's who are partnered with the National Bat Monitoring Programme. The National Bat Monitoring Programme works with the government to conserve bat populations.</p>
+                Bat numbers in the North West have drastically declined over the past century. We need your help to monitor these fascinating mammals through surveys and observation in your local area. This helps us understand their population and plan survival tactics. We are part of North Lancashire Bat Group who are partnered with the National Bat Monitoring Programme. The National Bat Monitoring Programme works with the government to conserve bat populations.</p>
             <br>
             <figure>
             <img src="HP_bats.jpeg" alt="Bat at night">
@@ -37,14 +39,15 @@
             </details>
         </section>
         <section>
-            <h2>BatScan Structure</h2>
-            <p>Stockport BatScan doesn't have a formal structure, training programme or membership so everyone is welcome to get involved at their own level.</p>
-            <br>
+            <h2>Interested in becoming a BatScanner?</h2>
+            <p>BatScan Stockport doesn't have a formal structure, training programme or membership so everyone is welcome to get involved at their own level.</p>
             <p>
             Ways to get involved are:
                 <ol>
                     <li>Log your sightings on our website.</li>
+                    <br>
                     <li>Join one of our volunteer groups to scan your area with other bat-lovers.</li>
+                    <br>
                     <li>Take part in one of our monthly BatScanning walks in Vernon Park (summer only).</li>
                 </ol>
             </p>
@@ -57,6 +60,7 @@
             <br>
         </section>
     </main>
+    <br>
     <footer>Copyright Maraiga Bailey</footer>
 <br>
 </body>
